[gd_scene load_steps=3 format=3 uid="uid://2uhupnmbfwps"]

[ext_resource type="Script" path="res://Product/ProductContainer.gd" id="1_0ce2p"]
[ext_resource type="FontFile" uid="uid://b2frhwyn8618f" path="res://Assets/fonts/pricedown bl.otf" id="1_lcl6w"]

[node name="VBoxContainer" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_0ce2p")

[node name="Label_ProductTitle" type="Label" parent="." groups=["label"]]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0.435294, 0, 1)
theme_override_fonts/font = ExtResource("1_lcl6w")
theme_override_font_sizes/font_size = 50
text = "Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_ProductPrice" type="Label" parent="." groups=["label"]]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.258824, 0.541176, 0.282353, 1)
theme_override_fonts/font = ExtResource("1_lcl6w")
theme_override_font_sizes/font_size = 50
text = "$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 12.0
expand_mode = 3

[node name="HBoxContainer_Item1" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.9

[node name="spacing" type="Control" parent="HBoxContainer_Item1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Button_Add" type="Button" parent="HBoxContainer_Item1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Label_Add" type="Label" parent="HBoxContainer_Item1/Button_Add"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_lcl6w")
theme_override_font_sizes/font_size = 40
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Minus" type="Button" parent="HBoxContainer_Item1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Label_Minus" type="Label" parent="HBoxContainer_Item1/Button_Minus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lcl6w")
theme_override_font_sizes/font_size = 40
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacing3" type="Control" parent="HBoxContainer_Item1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 16.55
alignment = 2

[node name="Button_BuyProduct" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label_BuyProduct" type="Label" parent="VBoxContainer/Button_BuyProduct"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.72549, 0.74902, 0.72549, 1)
theme_override_fonts/font = ExtResource("1_lcl6w")
theme_override_font_sizes/font_size = 40
text = "Add to cart !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_ProductCount" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lcl6w")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Node" type="Node" parent="."]

[connection signal="ready" from="TextureRect" to="MarginContainer" method="_on_texture_rect_ready"]
[connection signal="pressed" from="HBoxContainer_Item1/Button_Add" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="HBoxContainer_Item1/Button_Add" to="MarginContainer" method="_on_button_add_pressed"]
[connection signal="ready" from="HBoxContainer_Item1/Button_Add" to="MarginContainer" method="_on_button_add_ready"]
[connection signal="pressed" from="HBoxContainer_Item1/Button_Minus" to="." method="_on_button_minus_pressed"]
[connection signal="pressed" from="HBoxContainer_Item1/Button_Minus" to="MarginContainer" method="_on_button_minus_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_BuyProduct" to="." method="_on_button_buy_product_pressed"]
